tenants/us-west/cluster-infra/longhorn/manifests/longhorn-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare 
    traefik.ingress.kubernetes.io/router.middlewares: security-authelia-forwardauth@kubernetescrd

spec:
  rules:
  - host: "block.simplelumine.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend 
            port:
              number: 80
  tls:
  - hosts:
    - "block.simplelumine.com" # <--- 在这里也替换成你的域名
    secretName: longhorn-tls-secret
